# pg-migrate

./: .gitignore  Cargo.toml  README.md
migrations/: 2024-07-01_13:01:16_f44e620f-60e0-4470-8904-44b4022b11a5_add_users_down.sql  2024-07-01_13:01:16_f44e620f-60e0-4470-8904-44b4022b11a5_add_users_up.sql  2024-07-02_10:49:20_622511aa-d4ee-4ea7-a3c9-cd900bc2c2bd_add_wallet_down.sql  2024-07-02_10:49:20_622511aa-d4ee-4ea7-a3c9-cd900bc2c2bd_add_wallet_up.sql
src/: lib.rs  setup.rs
tests/: test_migrations.rs
